# VulkanRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TODO.txt  main.cpp
include/: config.hpp  renderer.hpp  test.hpp
libs/Release/: ext_imgui.lib
resources/models/sponza_v2/: sponza.mtl
resources/passes/: test.json  validate_json.bat
resources/shaders/hr/: blur.frag  compile_all_shaders.bat  compile_all_shaders.sh  compile_shader.bat  compile_shader.sh  geom.frag  geom.vert  light.frag  light.vert  overlay.frag  overlay.vert  shader.frag  shader.vert  ssao.frag
resources/shaders/hr/include/: colorspace.glsl  constants.glsl  utils.glsl
resources/shaders/spv/: blur.frag.spv  fullscreen.vert.spv  geom.frag.spv  geom.vert.spv  light.frag.spv  overlay.frag.spv  overlay.vert.spv  shader.frag.spv  shader.vert.spv  ssao.frag.spv  ssao.vert.spv
src/: CMakeLists.txt  common_resources.cpp  common_resources.hpp  configuration_constants.hpp  configuration_helper.hpp  data_structures.hpp  debug_tools.hpp  descriptor_layouts.inl  descriptors.cpp  descriptors.hpp  global_context.cpp  global_context.hpp  maths.hpp  memory.cpp  memory.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  obj_loader.cpp  obj_loader.hpp  pass.cpp  pass.hpp  postprocess_resources.inl  renderer.cpp  resource_manager.cpp  resource_manager.hpp  samplers.inl  shader.cpp  shader.hpp  ssao_resources.inl  swapchain.cpp  swapchain.hpp  test.cpp  texture.cpp  texture.hpp  tinyobjloader_integration.hpp  uniform_buffer_objects.inl  window_handler.cpp  window_handler.hpp
src/nv_helpers_vk/: TopLevelASGenerator.cpp  TopLevelASGenerator.h
tools/: compile_shaders.bat  compile_shaders.sh
